# polars-u256-plugin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_to_pypi.yml
examples/: benchmarks.py  example.py  groupby_example.py  scaled_decimals.py
polars_u256_plugin/: __init__.py  display.py
src/: expressions.rs  lib.rs
tests/: test_namespace.py  test_scaled_decimals.py
