[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "polars_u256_plugin"
version = "0.2.0"
description = "Polars plugin for 256-bit U256 and signed I256 (two's complement) integers backed by ruint"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "polars-u256-plugin authors" }]
dependencies = [
  "polars>=0.50",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/polars_u256_plugin/"
Repository = "https://github.com/your-repo/polars-u256-plugin"  # TODO: replace with real repo URL
Issues = "https://github.com/your-repo/polars-u256-plugin/issues"  # TODO: replace with real issues URL

[tool.hatch.build]
include = [
  "polars_u256_plugin/**",
  "README.md",
  "examples/**",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["polars_u256_plugin"]
artifacts = [
  "polars_u256_plugin/bin/*",
]

[tool.hatch.build.targets.sdist]
artifacts = [
  "polars_u256_plugin/bin/*",
]
